--- a/public/erp/css/index3.html
+++ b/public/erp/css/index3.html
@@ -2275,7 +2275,7 @@ document.getElementById('btnPrintPo').onclick = () => {
     total
   };
 
-  const url = `https://ynk2014.com/erp/templates/purchase.html?data=${encodeURIComponent(JSON.stringify(payload))}`;
+  const url = `/erp/templates/purchase.html?data=${encodeURIComponent(JSON.stringify(payload))}`;
 
 
   window.open(url, '_blank');
