--- a/public/erp/js/index.html
+++ b/public/erp/js/index.html
@@ -1094,7 +1094,7 @@
 
 <script type="module" defer>
 /* CORE */
-const PROXY='https://ynk2014.com:4443/notion';
+const PROXY='/api/notion';
 const DB_USERS='26d1f4ff9a0e800cba14e56be989568b';
 const DB_SALES='26e1f4ff9a0e801f807fde6aa13b12a0';
 const DB_PRODUCTS='2a01f4ff9a0e8016aa33c239d64eb482';
@@ -2655,7 +2655,7 @@ document.getElementById('btnPrintPo').onclick = () => {
   };
 
   // 실제 서버 경로에 맞게 조정하세요.
-  const url = `https://ynk2014.com/erp5/templates/purchase.html?data=${encodeURIComponent(JSON.stringify(payload))}`;
+  const url = `/erp/templates/purchase.html?data=${encodeURIComponent(JSON.stringify(payload))}`;
   // 또는 같은 서버/폴더라면: const url = `templates/purchase.html?data=...`
   window.open(url, "_blank");
 };
@@ -2721,7 +2721,7 @@ async function openPoFromSearch(no){
       total
     };
 
-    const url = `https://ynk2014.com/erp5/templates/purchase.html?data=${encodeURIComponent(JSON.stringify(payload))}`;
+    const url = `/erp/templates/purchase.html?data=${encodeURIComponent(JSON.stringify(payload))}`;
     window.open(url, '_blank');
   } catch (err) {
     alert('발주 상세 불러오기 오류: ' + err.message);
